# godunov_hydro

./: CMakeLists.txt  CONTRIBUTORS.md  REUSE.toml  Readme.md  SolverGodunovHydro.cpp  SolverGodunovHydro.h  _typos.toml  common.h  profiling.h
app/: CMakeLists.txt  solver_godunov_hydro.cpp  test_blast_2d.ini  test_blast_2d_restart.ini  test_blast_3d.ini  test_breaking_wave_2d.ini  test_double_mach_reflection_2d.ini  test_four_quadrant_2d.ini  test_four_quadrant_3d.ini  test_implode_2d.ini  test_implode_3d.ini  test_isentropic_vortex_2d.ini  test_jet_2d.ini  test_jet_3d.ini  test_kelvin_helmholtz_2d.ini  test_kelvin_helmholtz_2d_stone_large.ini  test_kelvin_helmholtz_2d_stone_small.ini  test_kelvin_helmholtz_3d.ini  test_rayleigh_taylor_2d.ini  test_rayleigh_taylor_3d.ini  test_shock_bubble_2d.ini  test_shock_bubble_2d_multi.ini  test_shock_bubble_3d.ini  test_shock_bubble_3d_multi.ini  test_shock_diffraction_2d.ini  test_shu_osher_2d.ini  test_triple_point_2d.ini  test_triple_point_3d.ini  test_woodward_2d.ini
app/bench/: set_visible_device.sh  submit_job_cea_he.sh  submit_job_topaze.sh
app/bench/results/: .gitignore  cea_he_weak_scaling.py  cea_he_weak_scaling_old.py  topaze_weak_scaling.py  topaze_weak_scaling_old.py
app/bench/weak_scaling_2d/: job_cea_he.sh.tmpl  job_cea_inti.sh.tmpl  job_topaze.sh.tmpl  test_blast_2d_replicated.ini.tmpl  test_blast_2d_replicated_cea_he.ini.tmpl
app/bench/weak_scaling_3d/: job_cea_he.sh.tmpl  job_cea_inti.sh.tmpl  job_topaze.sh.tmpl  test_blast_3d_replicated.ini.tmpl
app/block_size_study/: CMakeLists.txt  run.py  test_four_quadrant_2d_gamma_1p4.ini.tmpl  test_four_quadrant_2d_gamma_1p666.ini.tmpl  test_four_quadrant_3d_gamma_1p4.ini.tmpl  test_four_quadrant_3d_gamma_1p666.ini.tmpl
app/convergence/: convergence_plot.py  job.sh.tmpl  readme.md  run.py  submit_job.sh  test_breaking_wave_2d.ini.tmpl  test_isentropic_vortex_2d.ini  test_isentropic_vortex_2d.ini.tmpl
app/sedov_blast/: CMakeLists.txt  README.md  sedov.py  sedov_plot.py  test_sedov_blast_2d.ini  test_sedov_blast_3d.ini
app/sedov_blast/sedov_fortran/: CMakeLists.txt
app/sod/: CMakeLists.txt  README.md  extract_sod_numerical_solution.py  sod_alu_plot.py  sod_lx17_plot.py  sod_nitromethane_plot.py  sod_plot.py  sod_tnt_plot.py  test_sod_2d.ini  test_sod_2d_alu.ini  test_sod_2d_large.ini  test_sod_2d_lx17_jwl.ini  test_sod_2d_nitromethane.ini  test_sod_2d_tnt.ini
app/sod/exact_solution/: README.md
border_conditions/: BCDoubleMachReflection.cpp  BCDoubleMachReflection.h  BCJet.cpp  BCJet.h  BCShockBubble.cpp  BCShockBubble.h  FillOutside.cpp  FillOutside.h
eos/: EosWrapper.h
init/: InitBlast.cpp  InitBlast.h  InitBreakingWave.cpp  InitBreakingWave.h  InitDoubleMachReflection.cpp  InitDoubleMachReflection.h  InitFourQuadrant.cpp  InitFourQuadrant.h  InitImplode.cpp  InitImplode.h  InitIsentropicVortex.cpp  InitIsentropicVortex.h  InitJet.cpp  InitJet.h  InitKelvinHelmholtz.cpp  InitKelvinHelmholtz.h  InitRayleighTaylor.cpp  InitRayleighTaylor.h  InitShockBubble.cpp  InitShockBubble.h  InitShuOsher.cpp  InitShuOsher.h  InitSod.cpp  InitSod.h  InitTriplePoint.cpp  InitTriplePoint.h  InitWoodward.cpp  InitWoodward.h  init.cpp  init.h
models/: Hydro.h  HydroState.h  RiemannSolvers.h  utils_hydro.h
scheme/: AddGravitySourceTerm.cpp  AddGravitySourceTerm.h  ComputeDtHydroFunctor.cpp  ComputeDtHydroFunctor.h  ComputeFluxesAndConservativeUpdateFunctor.cpp  ComputeFluxesAndConservativeUpdateFunctor.h  ComputeFluxesAndStoreFunctor.cpp  ComputeFluxesAndStoreFunctor.h  ComputeFluxesAndUpdateFunctor.cpp  ComputeFluxesAndUpdateFunctor.h  ComputeHancockUpdate.h  ComputeLimitedSlopesFunctor.cpp  ComputeLimitedSlopesFunctor.h  ComputeViscousFluxesAndStoreFunctor.cpp  ComputeViscousFluxesAndStoreFunctor.h  ConvertToPrimitivesVariablesFunctor.cpp  ConvertToPrimitivesVariablesFunctor.h  GodunovImplemBase.h  GodunovImplemV0.cpp  GodunovImplemV0.h  GodunovImplemV1.cpp  GodunovImplemV1.h  GodunovImplemV2.cpp  GodunovImplemV2.h  ReadFluxesAndConservativeUpdateFunctor.cpp  ReadFluxesAndConservativeUpdateFunctor.h
utils/: ComputeDerivedQuantities.h  ComputeRadialProfileFunctor.h
